# aiwlib

./: .gitmodules  CMakeLists.txt  GPL3RUS.txt  LICENSE-RUS  Makefile  patch_swig.py  plot-qplt-pals.cpp  qplt-config-example  qplt.mk
dat/llbe/: Q-FCC-k2-oct.msh  Q-FCC-k3-romb.msh  Q4T.msh
demo/FPE/: Makefile  model.cpp  model.hpp  run1.py  run2.py  run3.py
demo/magnets/: Makefile  model.cpp  model.hpp
doc/: aiwlib.tex  formats.tex  gplt3.tex  lit.bib  make.tex  myugost2008.bst
doc/C++/: 3diag.tex  alloc.tex  angem.tex  binaryio.tex  checkpoint.tex  configfile.tex  dat2mesh.tex  debug.tex  gauss.tex  interpolations.tex  iostream.tex  isolines.tex  mesh.tex  meshop.tex  objconf.tex  pickle.tex  segy.tex  typeinfo.tex  vec.tex  voronoy.tex  zcube.tex
doc/picts/: sph-hex0.gplt  sph-hex1.gplt  sph-hex2.gplt  sph-tr0.gplt  sph-tr1.gplt  sph-tr2.gplt
doc/picts/gplt3/: fig01.gplt3  fig02.gplt3  fig03.gplt3  fig04.gplt3  fig05.gplt3  fig06.gplt3  fig07.gplt3  fig08.gplt3  fig09.gplt3  fig10.gplt3  fig11.gplt3  fig12.gplt3
doc/picts/pals/: black-red.gplt3  cmyk-bw.gplt3  cmyk.gplt3  color.gplt3  cyclic.gplt3  fv.gplt3  green-blue.gplt3  grey.gplt3  inv-cmyk-bw.gplt3  inv-grey.gplt3  inv-rainbow.gplt3  neg-pos1.gplt3  neg-pos2.gplt3  paraview.gplt3  positive.gplt3  rainbow.gplt3
doc/python/: chrono.tex  mixt.tex
doc/qplt/: geometry.tex  qplt.tex
doc/racs/: data.tex  gtable.tex  introduction.tex  racsutil.tex  runcalc.tex  select.tex  use-in-cpp.tex  use-in-py.tex
doc/zamr/: zamr-howto.tex
include/: alloc  binaryio  debug  debug.hpp  gzstream  gzstream.hpp  iostream  iostream.hpp  mem.hpp  mesh  swig  vec  vec.hpp
include/aiwlib/: 3diag  alloc  amr  amrview  angem  base_mesh  binary_format  binaryio  binhead  bit_piramide  bitmask  boxiter  c_array.i  caspol  checkpoint  checkpoints  conefold  config.mk  configfile  cubicarr  cuda  dat2mesh  debug  debug_ext  dipole  dmatr  dvec  farfield  farfield_buf  fftw  fplt.hpp  functor  fv_interface.hpp  gauss  geometry  gzstream  interpolations  iostream  isolines  json  (+44 more)
include/aiwlib/amr_/: LRnLA  access  base  commit  dump_load  memory
include/aiwlib/magnets/: data  initcond  lattice
include/aiwlib/qplt/: accessor  balls  base  imaging  mesh  mesh_cu  scene  vtexture
include/aiwlib/view/: amr  base  color  images  mesh  sphere  umesh3D  vtexture  zcube
include/aiwlib/zamr_/: base  cell  rebuild
python/: bindopt.py  calc.py  chrono.py  gtable.py  mixt.py  racs.py  rmi.py  select.py  timedate.py  vec.py
python/aiwlib/: MagnPoints.py  Surface.py  Volume.py  __init__.py  ast2eps.py  ast2tex.py  ast_nodes.py  bindopt.py  binheads.py  calc.py  chrono.py  datfile.py  gtable.py  mixt.py  racs.py  racs3.py  rmi.py  select.py  sources.py  tkConfView.py  tkPlot2D.py  tkWidgets.py  uplt_remote.py  vec.py
python/aiwlib/AST/: __init__.py  formats.py  nodes.py  parse.py
python2/aiwlib/: Volume.py  __init__.py  calc.py  chrono.py  gtable.py  llbe.py  mixt.py  racs.py  racs3.py  select.py  tkConfView.py  typeinfo.py  vec.py
python2/aiwlib/AST/: ast2eps.py  formats.py  nodes.py
python3/aiwlib/: calc.py  chrono.py  clif.py  gplt.py  gtable.py  mixt.py  qplt.py  qplt.ui  qplt_canvas.py  qplt_panel.py  qplt_widgets.py  racs.py  select.py  sources.py  tics.py  vec.py
python3/aiwlib/qplt/: __init__.py  bytecode.py  canvas.py  factory.py  mouse.py  parseopt.py  qplt.ui  remote.py  tics.py
python3/aiwlib/qplt/pals/: black_red.ppm  color.ppm  green_blue.ppm  grey.ppm  inv_grey.ppm  inv_rainbow.ppm  neg_pos1.ppm  neg_pos2.ppm  paraview.ppm  positive.ppm  rainbow.ppm  size
src/: amrview.cpp  arr2seg-Y.cpp  binary_format.cpp  binhead.cpp  checkpoint.cpp  checkpoints.cpp  configfile.cpp  debug.cpp  debug_ext.cpp  farfield.cpp  geometry.cpp  isolines.cpp  magnetics.cpp  mesh.cpp  mixt.cpp  mview_format.cpp  plot2D.cpp  racs.cpp  segy.cpp  sphere.cpp  swig.cpp  typeinfo.cpp
src/magnets/: data.cpp  lattice.cpp
src/qplt/: accessor.cpp  balls.cpp  base.cpp  imaging.cpp  mesh.cpp  mesh_cu.cpp  vtexture.cpp
src/view/: amr.cpp  color.cpp  images.cpp  mesh.cpp  umesh3D.cpp  vtexture.cpp  zcube.cpp
swig/: amrview.i  iostream.i  mesh.i  mesh.mk  mpi4py.i  plot2D.i  qplt.i  sphere.mk  swig.i  view.i
swig/qplt/: core.i
tests/: Makefile  bit_piramide.cpp
